updated ActivationKeyTests for exitCode/stdout/stderr changes from bug 1119688